--- a/p1/report/references.bib
+++ b/p1/report/references.bib
@@ -23,3 +23,30 @@
     howpublished = {\url{http://www.example.com/page}},
     note = {Accessed: YYYY-MM-DD}
 }
+
+@inproceedings{shengyi2022the37implementation,
+  author = {Huang, Shengyi and Dossa, Rousslan Fernand Julien and Raffin, Antonin and Kanervisto, Anssi and Wang, Weixun},
+  title = {The 37 Implementation Details of Proximal Policy Optimization},
+  booktitle = {ICLR Blog Track},
+  year = {2022},
+  note = {https://iclr-blog-track.github.io/2022/03/25/ppo-implementation-details/},
+  url  = {https://iclr-blog-track.github.io/2022/03/25/ppo-implementation-details/}
+}
+
+@inproceedings{
+andrychowicz2021what,
+title={What Matters for On-Policy Deep Actor-Critic Methods? A Large-Scale Study},
+author={Marcin Andrychowicz and Anton Raichuk and Piotr Sta{\'n}czyk and Manu Orsini and Sertan Girgin and Rapha{\"e}l Marinier and Leonard Hussenot and Matthieu Geist and Olivier Pietquin and Marcin Michalski and Sylvain Gelly and Olivier Bachem},
+booktitle={International Conference on Learning Representations},
+year={2021},
+url={https://openreview.net/forum?id=nIAxjsniDzg}
+}
+
+@inproceedings{
+Engstrom2020Implementation,
+title={Implementation Matters in Deep RL: A Case Study on PPO and TRPO},
+author={Logan Engstrom and Andrew Ilyas and Shibani Santurkar and Dimitris Tsipras and Firdaus Janoos and Larry Rudolph and Aleksander Madry},
+booktitle={International Conference on Learning Representations},
+year={2020},
+url={https://openreview.net/forum?id=r1etN1rtPB}
+}
