--- a/p1/report/report.tex
+++ b/p1/report/report.tex
@@ -7,6 +7,7 @@
 \usepackage[utf8]{inputenc} % Input encoding
 \usepackage[T1]{fontenc}    % Font encoding
 \usepackage{hyperref} % For hyperlinks (optional, but good practice)
+\usepackage{listings}
 \hypersetup{
     colorlinks=true,
     linkcolor=blue,
@@ -15,6 +16,15 @@
     pdftitle={My Report Title},
     pdfpagemode=FullScreen,
     }
+
+\lstset{
+    language=Python,
+    breaklines=true,
+    basicstyle=\ttfamily,
+    commentstyle={},
+    frame=single,
+    showstringspaces=false,
+}
 
 \title{My Research Report Title}
 \author{Your Name \\ Your Affiliation}
@@ -48,10 +58,10 @@ The following general PPO implementation details were adopted:
     \item \textbf{Adam Optimizer Epsilon:} The epsilon parameter of the Adam optimizer was set to \(1 \times 10^{-5}\) (Code reference: \texttt{ppo2/model.py\#L100}).
     \item \textbf{Adam Learning Rate Annealing:} The learning rate for the Adam optimizer was linearly decayed from \(3 \times 10^{-4}\) to 0 over the course of training, following common practice for MuJoCo environments (Code reference: \texttt{ppo2/ppo2.py\#L133-L135}).
     \item \textbf{Generalized Advantage Estimation (GAE):} GAE was employed for estimating advantage values.
-    \item \textbf{Advantage Normalization:} Calculated advantages were normalized at the minibatch level by subtracting the mean and dividing by the standard deviation (Code reference: \texttt{ppo2/model.py\#L139}).
+    \item \textbf{Advantage Normalization:} Calculated advantages were normalized at the minibatch level by subtracting the mean and dividing by the standard deviation.
     \item \textbf{Global Gradient Clipping:} The gradients of the policy and value networks were rescaled during each update iteration to ensure the global L2 norm did not exceed 0.5. This technique has been shown to offer potential performance benefits \cite{andrychowicz2021what}.
     \item \textbf{Separate Networks:} Distinct neural networks were used for the policy (actor) and value (critic) functions. The architectures are outlined below:
-    \begin{verbatim}
+    \begin{lstlisting}[language=Python]
 value_network = Sequential(
     layer_init(Linear(np.array(envs.single_observation_space.shape).prod(), 64)),
     Tanh(),
@@ -70,14 +80,14 @@ policy_network = Sequential(
 # value = value_network(observation)
 # action_dist = Categorical(policy_network(observation))
 # action = action_dist.sample()
-    \end{verbatim}
+    \end{lstlisting}
 \end{itemize}
 
 \subsubsection{MuJoCo-Specific PPO Algorithm Details}
 For environments involving continuous action spaces, specifically MuJoCo tasks, the following details were incorporated:
 \begin{itemize}
     \item \textbf{Continuous Actions:} Actions were sampled from a Normal distribution. The policy network outputs the mean, while the standard deviation is handled separately.
-    \item \textbf{State-Independent Log Standard Deviation:} The logarithm of the standard deviation for the action distribution was maintained as a state-independent parameter, initialized to zero (Code reference: \texttt{common/distributions.py\#L104}).
+    \item \textbf{State-Independent Log Standard Deviation:} The logarithm of the standard deviation for the action distribution was maintained as a state-independent parameter, initialized to zero.
     \item \textbf{Action Clipping and Storage:} Sampled continuous actions were clipped to the valid range defined by the environment. However, the original, unclipped action was stored in the experience buffer.
     \item \textbf{Reward Scaling:} Rewards were scaled by dividing them by the standard deviation of a rolling discounted sum of rewards. This technique, often implemented via wrappers like \texttt{VecNormalize}, is recommended for potentially improving performance \cite{Engstrom2020Implementation}.
 \end{itemize}
